fix properties bugs